--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
         "export": "npm run build && next export -o _static"
     },
     "dependencies": {
+        "@date-io/date-fns": "^2.14.0",
+        "@date-io/dayjs": "^2.14.0",
+        "@date-io/luxon": "^2.14.0",
+        "@date-io/moment": "^2.14.0",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
         "@hookform/resolvers": "^2.7.1",
+        "@material-ui/core": "^5.0.0-beta.5",
+        "@mui/lab": "^5.0.0-alpha.86",
+        "@mui/material": "^5.8.4",
         "@nivo/core": "^0.79.0",
         "@nivo/line": "^0.79.1",
         "@nivo/pie": "^0.79.1",
@@ -19,9 +28,11 @@
         "bcryptjs": "^2.4.3",
         "bootstrap": "^5.1.3",
         "crypto": "^1.0.1",
+        "date-fns": "^2.28.0",
         "express-jwt": "^6.1.0",
         "fs": "^0.0.1-security",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.3",
         "mongodb": "^4.7.0",
         "multiselect-react-dropdown": "^2.0.22",
         "mysql": "^2.18.1",
@@ -32,6 +43,7 @@
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-bootstrap": "^2.4.0",
+        "react-datepicker": "^4.8.0",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.12.1",
         "react-icons": "^4.4.0",
